--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,10 +11,25 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          registry-url: "https://registry.npmjs.org"
+
+      - name: prepare
+        run: |
+          npm ci
+          npm build
+          mkdir -p build
+          mv dist/*.css build/
+
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
+            build/*.css
             readme.md
             changelog.md
             license.txt
