--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,8 @@ jobs:
         run: |
           npm ci
           npm run build:gh
-          zip -r "theme.zip" "build/theme-neon-quantower"
+          cd build
+          zip -r "../theme.zip" "theme-neon-quantower"
  
       - name: Release
         uses: softprops/action-gh-release@v2
