--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
           npm ci
           npm run build:gh
           cd build
-          zip -r "../theme.zip" "./*"
+          zip -r ../theme.zip
  
       - name: Release
         uses: softprops/action-gh-release@v2
